--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "sideEffects": false,
+  "name": "remix-vanilla-test",
   "scripts": {
     "build": "remix build",
     "dev:remix": "remix watch",
